2007-08-08  Loic Dachary <loic@dachary.org>

	* Release 1.2.0

	* debian/python-poker-network.postinst,
	  debian/python-poker-network.postrm: initialize munin plugins
	* pokernetwork/munin/Makefile, pokernetwork/munin/Makefile.in:
	  commited by mistake
	* pokernetwork/munin/test_poker_hands_,
	  pokernetwork/munin/test_poker_players_,
	  pokernetwork/munin/test_poker_traffic_: use srcdir to find the
	  scripts
	* pokernetwork/munin/Makefile.am: tests are found in srcdir
	* pokernetwork/munin/Makefile.am: tests are distributed for munin
	* pokernetwork/munin/Makefile.am: scripts are in the distribution
	* debian/python-poker-network.install: install munin plugin
	* debian/control, debian/control.dapper, debian/control.edgy,
	  debian/control.etch, debian/control.feisty, debian/control.gutsy,
	  debian/control.lenny, debian/control.unstable: perl JSON is
	  required for munin plugin
	* configure.ac: munin plugin directory has its own standalone
	  makefile with tests included
	* Makefile.am: recurse into munin plugins
	* pokernetwork/munin/Makefile.am: munin scripts
	* pokernetwork/munin, pokernetwork/munin/Makefile,
	  pokernetwork/munin/Makefile.am, pokernetwork/munin/Makefile.in,
	  pokernetwork/munin/poker_hands_,
	  pokernetwork/munin/poker_players_,
	  pokernetwork/munin/poker_traffic_,
	  pokernetwork/munin/test_config.dat,
	  pokernetwork/munin/test_poker_hands_,
	  pokernetwork/munin/test_poker_players_,
	  pokernetwork/munin/test_poker_traffic_,
	  pokernetwork/munin/test_wget1: munin plugins
	* tests/test-webservice.py.in: test REST web service
	  test PacketPokerStat service
	* tests/test-clientserver.py.in, tests/test-currencyclient.py.in,
	  tests/test-gamewindow.py.in, tests/test-poker2d.py.in,
	  tests/test-pokeravatar.py.in, tests/test-pokerbotlogic.py.in,
	  tests/test-pokercashier.py.in, tests/test-pokerchildren.py.in,
	  tests/test-pokerclient.py.in, tests/test-pokerdatabase.py.in,